@@ -57,6 +57,15 @@
             <mainClass>org.group7.server.LaunchServer</mainClass>
           </configuration>
         </plugin>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>17</source>
+                  <target>17</target>
+                  <compilerArgs>--enable-preview</compilerArgs>
+              </configuration>
+          </plugin>
       </plugins>
   </build>
 </project>
